--- a/public/promotions.html
+++ b/public/promotions.html
@@ -996,7 +996,7 @@
                 const { data: orgData, error: orgError } = await window.supabaseClient
                     .from('organizations')
                     .select('*')
-                    .eq('id', currentUser.id)
+                    .eq('auth_user_id', currentUser.id)
                     .maybeSingle();
                 
                 console.log('Organization query result:', { orgData, orgError });
