Update promotions.html meta tags to match index.html branding

--- a/public/promotions.html
+++ b/public/promotions.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Scopri promozioni esclusive e risparmia con CDM86">
+    <meta name="description" content="La Piattaforma del Risparmio - Registrati e scopri come accedere ad un Mondo di sconti e servizi a te dedicati">
     <meta name="theme-color" content="#2563eb">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="CDM86">
     
-    <title>CDM86 - Promozioni Esclusive</title>
+    <title>CDM86 - La Piattaforma del Risparmio</title>
     
     <!-- PWA Manifest -->
     <!-- <link rel="manifest" href="/manifest.json"> -->
