--- a/public/promotions.html
+++ b/public/promotions.html
@@ -1799,6 +1799,11 @@
         }
     </script>
 
+    <!-- Badge Slogan Iniziale -->
+    <div class="promo-badge-slogan" id="promoBadgeSlogan">
+        <div class="promo-badge">🎉 OFFERTA DI LANCIO 2026</div>
+    </div>
+
     <!-- Promo Modal 2026 -->
     <div class="promo-modal-overlay" id="promoModal">
         <div class="promo-modal-container">
@@ -1842,7 +1847,7 @@
                 <!-- Features -->
                 <ul class="promo-features">
                     <li>Accesso illimitato a tutte le promozioni</li>
-                    <li>Sistema di punti e referral</li>
+                    <li>Guadagni raddoppiati per tutti!</li>
                     <li>Sconti esclusivi riservati ai membri</li>
                     <li>Supporto prioritario</li>
                 </ul>
@@ -1864,17 +1869,30 @@
     // GESTIONE MODAL PROMOZIONALE
     // ============================================
 
-    // Mostra la modal all'avvio (dopo 1 secondo)
+    // Sequenza animata: Badge slogan → Modal
     window.addEventListener('DOMContentLoaded', () => {
-        // Controlla se l'utente ha già visto la modal oggi
+        // Controlla se l'utente ha già visto la promo oggi
         const promoShown = sessionStorage.getItem('promoModalShown');
         
         if (!promoShown) {
+            // STEP 1: Mostra badge slogan dopo 1 secondo
+            setTimeout(() => {
+                showBadgeSlogan();
+            }, 1000);
+            
+            // STEP 2: Dopo 3 secondi (durata animazione slogan), mostra modal
             setTimeout(() => {
                 showPromoModal();
-            }, 1000);
+            }, 4000);
         }
     });
+
+    function showBadgeSlogan() {
+        const badge = document.getElementById('promoBadgeSlogan');
+        if (badge) {
+            badge.classList.add('show');
+        }
+    }
 
     function showPromoModal() {
         const modal = document.getElementById('promoModal');
