Fix: promo modal - large golden text slogan only, revert button text to white

--- a/public/promotions.html
+++ b/public/promotions.html
@@ -1799,9 +1799,9 @@
         }
     </script>
 
-    <!-- Badge Slogan Iniziale -->
+    <!-- Scritta Slogan Iniziale - Solo testo dorato -->
     <div class="promo-badge-slogan" id="promoBadgeSlogan">
-        <div class="promo-badge">🎉 OFFERTA DI LANCIO 2026</div>
+        <div class="slogan-text">OFFERTA DI LANCIO 2026</div>
     </div>
 
     <!-- Promo Modal 2026 -->
