Update: move prices higher (120px margin), enlarge 2026 to 56px, add animated calendar with scrolling months

--- a/public/promotions.html
+++ b/public/promotions.html
@@ -1838,7 +1838,31 @@
                     <div class="price-container">
                         <div class="old-price">€20</div>
                         <div class="new-price">€10</div>
-                        <div class="price-period">per tutto il 2026</div>
+                        <div class="price-period">
+                            per tutto il <span class="year-highlight">2026</span>
+                            <div class="calendar-animation">
+                                <div class="calendar-months">
+                                    <span>GEN</span>
+                                    <span>FEB</span>
+                                    <span>MAR</span>
+                                    <span>APR</span>
+                                    <span>MAG</span>
+                                    <span>GIU</span>
+                                    <span>LUG</span>
+                                    <span>AGO</span>
+                                    <span>SET</span>
+                                    <span>OTT</span>
+                                    <span>NOV</span>
+                                    <span>DIC</span>
+                                    <span>GEN</span>
+                                    <span>FEB</span>
+                                    <span>MAR</span>
+                                    <span>APR</span>
+                                    <span>MAG</span>
+                                    <span>GIU</span>
+                                </div>
+                            </div>
+                        </div>
                         <div class="discount-badge">-50% SCONTO</div>
                     </div>
                 </div>
