--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="assets/css/promotions.css">
     <link rel="stylesheet" href="assets/css/animations.css">
     <link rel="stylesheet" href="assets/css/login-modal.css">
+    <link rel="stylesheet" href="assets/css/selection-modal.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
@@ -392,42 +393,29 @@
         </button>
     </nav>
 
-    <!-- Selection Modal (Prima schermata) -->
-    <div class="selection-modal-overlay" id="selectionModalOverlay">
-        <div class="selection-modal">
-            <div class="selection-modal-header">
-                <button class="selection-modal-close" onclick="LoginModal.closeSelection()">&times;</button>
-                <div class="selection-modal-icon">🔐</div>
-                <h2 class="selection-modal-title">Benvenuto su CDM86</h2>
-                <p class="selection-modal-subtitle">Scegli come vuoi accedere alla piattaforma</p>
+    <!-- CDM Selection Modal - STANDALONE (Nuova modale indipendente) -->
+    <div class="cdm-selection-overlay" id="cdmSelectionOverlay">
+        <div class="cdm-selection-container">
+            <div class="cdm-selection-header">
+                <div class="cdm-selection-icon">🔐</div>
+                <h2 class="cdm-selection-title">Benvenuto su CDM86</h2>
+                <p class="cdm-selection-subtitle">Scegli come vuoi accedere alla piattaforma</p>
             </div>
 
-            <div class="selection-modal-body">
-                <div class="selection-options">
-                    <div class="selection-option" onclick="LoginModal.selectUser()">
-                        <div class="selection-option-content">
-                            <span class="selection-option-icon">👤</span>
-                            <h3 class="selection-option-title">Sono un Utente</h3>
-                            <p class="selection-option-description">Accedi alle promozioni e guadagna punti</p>
-                        </div>
+            <div class="cdm-selection-body">
+                <div class="cdm-selection-options">
+                    <div class="cdm-selection-option" onclick="CDMSelection.selectUser()">
+                        <div class="cdm-selection-option-icon">👤</div>
+                        <h3 class="cdm-selection-option-title">Sono un Utente</h3>
+                        <p class="cdm-selection-option-desc">Accedi alle promozioni e guadagna punti</p>
                     </div>
 
-                    <div class="selection-option" onclick="LoginModal.selectCompany()">
-                        <span class="selection-option-badge">Partner</span>
-                        <div class="selection-option-content">
-                            <span class="selection-option-icon">🏢</span>
-                            <h3 class="selection-option-title">Azienda/Associazione</h3>
-                            <p class="selection-option-description">Richiedi informazioni per pubblicare promozioni</p>
-                        </div>
+                    <div class="cdm-selection-option" onclick="CDMSelection.selectBusiness()">
+                        <div class="cdm-selection-option-icon">🏢</div>
+                        <h3 class="cdm-selection-option-title">Azienda/Associazione</h3>
+                        <p class="cdm-selection-option-desc">Richiedi informazioni per pubblicare promozioni</p>
                     </div>
                 </div>
-
-                <div class="selection-login-section">
-                    <p>Hai già un account?</p>
-                    <button class="selection-login-btn" onclick="LoginModal.showExistingUserLogin()">
-                        <span>🔑</span>
-                        <span>Accedi</span>
-                    </button>
                 </div>
             </div>
         </div>
@@ -1106,5 +1094,8 @@
             deferredPrompt = null;
         });
     </script>
+    
+    <!-- Selection Modal Standalone JavaScript -->
+    <script src="assets/js/selection-modal.js"></script>
 </body>
 </html>
