--- a/reset_and_create_admin.html
+++ b/reset_and_create_admin.html
@@ -360,7 +360,8 @@
             const admin = {
                 email: 'admin@cdm86.com',
                 password: 'Admin123!',
-                full_name: 'Admin CDM86',
+                first_name: 'Admin',
+                last_name: 'CDM86',
                 role: 'admin',
                 referral_code: 'ADMIN001'
             };
@@ -374,7 +375,8 @@
                     password: admin.password,
                     options: {
                         data: {
-                            full_name: admin.full_name
+                            first_name: admin.first_name,
+                            last_name: admin.last_name
                         }
                     }
                 });
@@ -401,7 +403,8 @@
                 const { error: updateError } = await supabaseClient
                     .from('users')
                     .update({
-                        full_name: admin.full_name,
+                        first_name: admin.first_name,
+                        last_name: admin.last_name,
                         role: admin.role,
                         referral_code: admin.referral_code
                     })
