Fix: usa stesso dominio cdm86.com per utente test

--- a/reset_and_create_admin.html
+++ b/reset_and_create_admin.html
@@ -208,7 +208,7 @@
 
             <div class="user-card">
                 <strong>👤 UTENTE NORMALE:</strong> Mario Rossi<br>
-                Email: mario.rossi@gmail.com<br>
+                Email: mario.rossi@cdm86.com<br>
                 Password: MarioRossi2026!<br>
                 Referral Code: MARIO001<br>
                 Ruolo: user
@@ -367,7 +367,7 @@
                     referral_code: 'ADMIN001'
                 },
                 {
-                    email: 'mario.rossi@gmail.com',
+                    email: 'mario.rossi@cdm86.com',
                     password: 'MarioRossi2026!',
                     first_name: 'Mario',
                     last_name: 'Rossi',
