--- a/index.html
+++ b/index.html
@@ -1109,5 +1109,6 @@
             deferredPrompt = null;
         });
     </script>
+    <!-- Force redeploy: Sun Jan 18 13:55:00 CET 2026 -->
 </body>
-</html>/* Force redeploy - Sun Jan 18 13:51:51 CET 2026 */
+</html>
