Fix: Cambiato 'Transazioni' in 'Cronologia Movimenti'

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -692,7 +692,7 @@
                  ======================================== -->
             <div class="mlm-cards-section">
                 <div class="mlm-cards-grid">
-                    <!-- Card Transazioni -->
+                    <!-- Card Cronologia Movimenti -->
                     <div class="mlm-card mlm-card-transactions" onclick="openTransactionsModal()">
                         <div class="mlm-card-background">
                             <div class="mlm-card-icon-bg">
@@ -703,7 +703,7 @@
                             <div class="mlm-card-icon">
                                 <i class="fas fa-wallet"></i>
                             </div>
-                            <h3>💰 Transazioni</h3>
+                            <h3>💰 Cronologia Movimenti</h3>
                             <p class="mlm-card-description">Cronologia completa dei tuoi movimenti punti</p>
                             <div class="mlm-card-stats">
                                 <span class="mlm-card-count" id="transactions-count">0</span>
@@ -3040,7 +3040,7 @@
             <div class="mlm-modal-header">
                 <h3>
                     <i class="fas fa-history"></i>
-                    Storico Transazioni Completo
+                    Cronologia Movimenti Completa
                 </h3>
                 <button class="mlm-modal-close" onclick="closeTransactionsModal()">
                     <i class="fas fa-times"></i>
