Fix: Inverti card (Compensi sopra), togli 'anche', link con ancora #compensi

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1454,12 +1454,12 @@
                     <div style="font-size: 48px; margin-bottom: 16px;">💼</div>
                     <h3 style="font-size: 18px; font-weight: 700; margin-bottom: 12px; color: white;">Aziende Inserzioniste</h3>
                     <div style="background: rgba(255,255,255,0.2); border-radius: 8px; padding: 12px; margin-bottom: 12px;">
-                        <div style="font-size: 14px; font-weight: 600; margin-bottom: 8px;">✅ PUNTI</div>
-                        <div style="font-size: 12px;">Guadagni punti per la segnalazione</div>
+                        <div style="font-size: 14px; font-weight: 600; margin-bottom: 8px;">✅ COMPENSI</div>
+                        <div style="font-size: 12px;">Ricevi Compensi Economici</div>
                     </div>
                     <div style="background: rgba(255,255,255,0.2); border-radius: 8px; padding: 12px; margin-bottom: 12px;">
-                        <div style="font-size: 14px; font-weight: 600; margin-bottom: 8px;">✅ COMPENSI</div>
-                        <div style="font-size: 12px;">Ricevi anche compensi economici</div>
+                        <div style="font-size: 14px; font-weight: 600; margin-bottom: 8px;">✅ PUNTI</div>
+                        <div style="font-size: 12px;">Guadagni punti per la segnalazione</div>
                     </div>
                     <div style="background: rgba(255,215,0,0.3); border-radius: 8px; padding: 8px; margin-top: 16px;">
                         <div style="font-size: 11px; font-weight: 600;">🏆 MASSIMO VANTAGGIO</div>
@@ -1503,7 +1503,7 @@
             
             <!-- Link Spiegazioni Complete -->
             <div style="text-align: center; margin: 20px 0;">
-                <a href="/public/lapiattaforma.html" target="_blank" style="display: inline-block; background: #667eea; color: white; padding: 12px 24px; border-radius: 8px; text-decoration: none; font-weight: 600; transition: all 0.3s;">
+                <a href="/public/lapiattaforma.html#compensi" target="_blank" style="display: inline-block; background: #667eea; color: white; padding: 12px 24px; border-radius: 8px; text-decoration: none; font-weight: 600; transition: all 0.3s;">
                     <i class="fas fa-book-open" style="margin-right: 8px;"></i>
                     📖 Scopri i dettagli completi
                 </a>
